--- a/docs/src/content/docs/de/guides/i18n.mdx
+++ b/docs/src/content/docs/de/guides/i18n.mdx
@@ -202,7 +202,7 @@ Du kannst Übersetzungen für zusätzliche Sprachen, die du unterstützt, über 
    }
    ```
 
-   Die Suchfunktion von Starlight wird von der [Pagefind](https://pagefind.app/) Bibliothek unterstützt.
+   Die Suchfunktion von Starlight wird von der [Pagefind-Bibliothek](https://pagefind.app/) unterstützt.
    Du kannst die Übersetzungen für Pagefinds UI in der gleichen JSON Datei mit `pagefind`-Schlüsseln setzen:
 
    ```json
