--- a/docs/src/content/docs/de/guides/css-and-tailwind.mdx
+++ b/docs/src/content/docs/de/guides/css-and-tailwind.mdx
@@ -181,7 +181,7 @@ Wenn du bereits eine Starlight-Site hast und Tailwind-CSS hinzufügen möchtest,
     });
     ```
 
-5.  Füge das Starlight Tailwind Plugin zu `tailwind.config.cjs` hinzu:
+5.  Füge das Starlight Tailwind-Plugin zu `tailwind.config.cjs` hinzu:
 
     ```js ins={2,7}
     // tailwind.config.cjs
