--- a/docs/src/content/docs/de/guides/css-and-tailwind.mdx
+++ b/docs/src/content/docs/de/guides/css-and-tailwind.mdx
@@ -85,7 +85,7 @@ yarn create astro --template starlight/tailwind
 
 ### Tailwind zu einem bestehenden Projekt hinzufügen
 
-Wenn du bereits eine Starlight-Site hast und Tailwind-CSS hinzufügen möchtest, folge dieser Anleitung.
+Wenn du bereits eine Starlight-Website hast und Tailwind CSS hinzufügen möchtest, folge dieser Anleitung.
 
 1.  Füge die Tailwind-Integration von Astro hinzu:
 
