--- a/docs/src/content/docs/de/guides/css-and-tailwind.mdx
+++ b/docs/src/content/docs/de/guides/css-and-tailwind.mdx
@@ -44,7 +44,7 @@ Du kannst dir alle CSS-Eigenschaften, die von Starlight verwendet werden und die
 
 ## Tailwind CSS
 
-Tailwind-CSS-Unterstützung in Astro-Projekten wird durch die [Astro Tailwind Integration](https://docs.astro.build/de/guides/integrations-guide/tailwind/) bereitgestellt.
+Tailwind CSS-Unterstützung in Astro-Projekten wird durch die [Astro Tailwind-Integration](https://docs.astro.build/de/guides/integrations-guide/tailwind/) bereitgestellt.
 Starlight bietet ein komplementäres Tailwind-Plugin, um Tailwind für die Kompatibilität mit den Stilen von Starlight zu konfigurieren.
 
 Das Starlight Tailwind-Plugin wendet die folgende Konfiguration an:
