--- a/docs/src/content/docs/de/guides/css-and-tailwind.mdx
+++ b/docs/src/content/docs/de/guides/css-and-tailwind.mdx
@@ -57,7 +57,7 @@ Das Starlight Tailwind-Plugin wendet die folgende Konfiguration an:
 
 import { Tabs, TabItem } from '@astrojs/starlight/components';
 
-Starte ein neues Starlight Projekt mit Tailwind CSS vorkonfiguriert, indem du `create astro` verwendest:
+Starte ein neues Starlight-Projekt mit Tailwind CSS vorkonfiguriert, indem du `create astro` verwendest:
 
 <Tabs>
 <TabItem label="npm">
