--- a/docs/src/content/docs/de/guides/css-and-tailwind.mdx
+++ b/docs/src/content/docs/de/guides/css-and-tailwind.mdx
@@ -117,7 +117,7 @@ Wenn du bereits eine Starlight-Website hast und Tailwind CSS hinzufügen möchte
 
     </Tabs>
 
-2.  Installiere das Starlight Tailwind Plugin:
+2.  Installiere das Starlight Tailwind-Plugin:
 
     <Tabs>
 
