--- a/docs/src/content/docs/de/guides/css-and-tailwind.mdx
+++ b/docs/src/content/docs/de/guides/css-and-tailwind.mdx
@@ -20,7 +20,7 @@ Passe die Stile deiner Starlight-Seite an, indem du zusätzliche CSS-Dateien ber
    }
    ```
 
-2. Füge den Pfad zu deiner CSS-Datei in Starlight's `customCss`- Array in `astro.config.mjs` ein:
+2. Füge den Pfad zu deiner CSS-Datei in Starlights `customCss`- Array in `astro.config.mjs` ein:
 
    ```js
    // astro.config.mjs
