--- a/docs/src/content/docs/de/getting-started.mdx
+++ b/docs/src/content/docs/de/getting-started.mdx
@@ -75,7 +75,7 @@ description: This is a page in my Starlight-powered site
 
 Wenn du etwas Wichtiges vergisst, wird Starlight dich daran erinnern.
 
-## Veröffentlichung deiner Starlight Website
+## Veröffentlichung deiner Starlight-Website
 
 Sobald du deine Starlight Website erstellt und angepasst hast, kannst du sie auf einen Webserver oder Hosting-Plattform deiner Wahl veröffentlichen, einschließlich Netlify, Vercel, GitHub Pages und vielen mehr.
 
