--- a/docs/src/content/docs/de/guides/customization.mdx
+++ b/docs/src/content/docs/de/guides/customization.mdx
@@ -7,7 +7,7 @@ import { Tabs, TabItem } from '@astrojs/starlight/components';
 import FileTree from '../../../../components/file-tree.astro';
 
 Starlight bietet sinnvolle Standard-Styling und -Funktionen, so dass du schnell loslegen kannst, ohne dass eine Konfiguration erforderlich ist.
-Wenn du das Aussehen deiner Starlight-Site anpassen willst, findest du in dieser Anleitung alle nötigen Informationen.
+Wenn du das Aussehen deiner Starlight-Website anpassen willst, findest du in dieser Anleitung alle nötigen Informationen.
 
 ## Dein Logo hinzufügen
 
