--- a/docs/src/content/docs/de/getting-started.mdx
+++ b/docs/src/content/docs/de/getting-started.mdx
@@ -79,7 +79,7 @@ Wenn du etwas Wichtiges vergisst, wird Starlight dich daran erinnern.
 
 Sobald du deine Starlight Website erstellt und angepasst hast, kannst du sie auf einen Webserver oder Hosting-Plattform deiner Wahl veröffentlichen, einschließlich Netlify, Vercel, GitHub Pages und vielen mehr.
 
-[Lerne mehr über die Veröffentlichung einer Astro Website in der Astro Dokumentation.](https://docs.astro.build/de/guides/deploy/)
+[Lerne mehr über die Veröffentlichung einer Astro-Website in der Astro-Dokumentation.](https://docs.astro.build/de/guides/deploy/)
 
 ## Starlight aktualisieren
 
