--- a/docs/src/content/docs/de/guides/customization.mdx
+++ b/docs/src/content/docs/de/guides/customization.mdx
@@ -399,7 +399,7 @@ Es bietet npm-Module, die du für die gewünschten Schriftarten installieren kan
     });
     ```
 
-    Fontsource liefert mehrere CSS-Dateien für jede Schriftart. Siehe die [Fontsource-Dokumentation](https://fontsource.org/docs/getting-started/install#4-weights-and-styles) über das Einbinden verschiedener Schnitte und Stile, um zu verstehen, welche zu verwenden sind.
+    Fontsource liefert mehrere CSS-Dateien für jede Schriftart. Siehe die [Fontsource-Dokumentation](https://fontsource.org/docs/getting-started/install#4-weights-and-styles) über das Einbinden verschiedener Schriftstärken und Styles, um zu verstehen, welche zu verwenden sind.
 
 ### Schriftarten verwenden
 
@@ -425,4 +425,4 @@ main {
 }
 ```
 
-Folge den [custom CSS Anleitungen](/de/guides/css-and-tailwind/#benutzerdefinierte-css-stile), um deine Stile zu deiner Website hinzuzufügen.
+Folge den [custom CSS Anleitungen](/de/guides/css-and-tailwind/#benutzerdefinierte-css-styles-stile), um deine Styles zu deiner Website hinzuzufügen.
