--- a/docs/src/content/docs/de/guides/project-structure.mdx
+++ b/docs/src/content/docs/de/guides/project-structure.mdx
@@ -5,7 +5,7 @@ description: Lerne, wie du Dateien in deinem Starlight-Projekt organisierst.
 
 Diese Anleitung zeigt dir, wie ein Starlight-Projekt organisiert ist und was die verschiedenen Dateien in deinem Projekt tun.
 
-Starlight-Projekte folgen im Allgemeinen der gleichen Datei- und Verzeichnisstruktur wie andere Astro-Projekte. Siehe [Astros Projektstruktur Dokumentation](https://docs.astro.build/de/core-concepts/project-structure/) für weitere Details.
+Starlight-Projekte folgen im Allgemeinen der gleichen Datei- und Verzeichnisstruktur wie andere Astro-Projekte. Siehe [Astros Dokumentation zur Projektstruktur](https://docs.astro.build/de/core-concepts/project-structure/) für weitere Details.
 
 ## Dateien und Verzeichnisse
 
