--- a/docs/src/content/docs/de/showcase.mdx
+++ b/docs/src/content/docs/de/showcase.mdx
@@ -28,26 +28,26 @@ Diese Community-Tools, Plugins und Integrationen arbeiten mit Starlight zusammen
 	<LinkCard
 		href="https://www.feelback.dev/blog/new-astro-starlight-integration/"
 		title="FeelBack"
-		description="Fügen Sie Ihren Dokumentseiten ein Benutzer-Feedback-System hinzu."
+		description="Füge deinen Dokumentseiten ein Benutzer-Feedback-System hinzu."
 	/>
 	<LinkCard
 		href="https://github.com/HiDeoo/starlight-blog"
 		title="starlight-blog"
-		description="Fügen Sie Ihrer Dokumentationsseite einen Blog hinzu."
+		description="Erweitere deine Dokumentationsseite mit einen Blog."
 	/>
 	<LinkCard
 		href="https://github.com/HiDeoo/starlight-links-validator"
 		title="starlight-links-validator"
-		description="Überprüfen Sie Ihre Starlight-Seiten auf fehlerhafte Links."
+		description="Überprüfe deine Starlight-Seiten auf fehlerhafte Links."
 	/>
 	<LinkCard
 		href="https://github.com/HiDeoo/starlight-typedoc"
 		title="starlight-typedoc"
-		description="Erzeugen Sie Starlight-Seiten aus TypeScript mit TypeDoc."
+		description="Erzeuge Starlight-Seiten aus TypeScript mit TypeDoc."
 	/>
 	<LinkCard
 		href="https://github.com/HiDeoo/starlight-openapi"
 		title="starlight-openapi"
-		description="Dokumentationsseiten aus OpenAPI/Swagger-Spezifikationen erzeugen."
+		description="Erstelle Dokumentationsseiten mithilfe OpenAPI/Swagger-Spezifikationen."
 	/>
 </CardGrid>
