--- a/docs/src/content/docs/de/guides/customization.mdx
+++ b/docs/src/content/docs/de/guides/customization.mdx
@@ -11,7 +11,7 @@ Wenn du das Aussehen deiner Starlight-Website anpassen willst, findest du in die
 
 ## Dein Logo hinzufügen
 
-Das Hinzufügen eines eigenen Logos im Header ist ein schneller Weg, um einer Starlight-Site dein individuelles Branding zu geben.
+Das Hinzufügen eines eigenen Logos im Header ist ein schneller Weg, um einer Starlight-Website dein individuelles Branding zu geben.
 
 1. Füge deine Logodatei in das Verzeichnis `src/assets/` ein:
 
