--- a/docs/src/content/docs/de/guides/customization.mdx
+++ b/docs/src/content/docs/de/guides/customization.mdx
@@ -250,7 +250,7 @@ export default defineConfig({
 ## Benutzerdefinierte 404-Seite
 
 Starlight-Seiten zeigen standardmäßig eine einfache 404-Seite an.
-Du kannst dies anpassen, indem du eine `404.md` (oder `404.mdx`) Datei zu deinem `src/content/docs/` Verzeichnis hinzufügen:
+Du kannst dies anpassen, indem du eine `404.md` (oder `404.mdx`) Datei zu deinem `src/content/docs/` Verzeichnis hinzufügst:
 
 <FileTree>
 
