--- a/docs/src/content/docs/de/guides/customization.mdx
+++ b/docs/src/content/docs/de/guides/customization.mdx
@@ -285,7 +285,7 @@ Wenn du deiner Starlight-Website eine eigene Schriftart hinzufügen musst, kanns
 
 ### Schriftarten einrichten
 
-Wenn du bereits über Schriftdateien verfügen, folge der [Anleitung "Lokale Schriftartendateien einrichten"](#lokale-schriftartendateien-einrichten).
+Wenn du bereits über Schriftartdateien verfügst, folge der [Anleitung zum Einrichten lokaler Schriftartdateien](#lokale-schriftartendateien-einrichten).
 Um Google Fonts zu verwenden, folge der [Anleitung Fontsource einrichten](#einrichten-einer-fontsource-schriftart).
 
 #### Lokale Schriftartendateien einrichten
