--- a/docs/src/content/docs/de/guides/customization.mdx
+++ b/docs/src/content/docs/de/guides/customization.mdx
@@ -348,7 +348,7 @@ Es bietet npm-Module, die du für die gewünschten Schriftarten installieren kan
     In diesem Beispiel wird [IBM Plex Serif](https://fontsource.org/fonts/ibm-plex-serif) verwendet.
 
 2.  Installiere das Paket für deine gewählte Schriftart.
-    Du findest den Namen des Pakets, indem du auf der Fontsource-Website auf `Installieren` klicken.
+    Du findest den Namen des Pakets, indem du auf der Fontsource-Website auf `Installieren` klickst.
 
          <Tabs>
 
