fix: fixed typos

--- a/docs/src/content/docs/es/guides/sidebar.mdx
+++ b/docs/src/content/docs/es/guides/sidebar.mdx
@@ -330,11 +330,11 @@ En el siguiente ejemplo, `attrs` se usa para agregar un atributo `target="_blank
 starlight({
 	sidebar: [
 		{
-			label: 'Guides',
+			label: 'Guías',
 			items: [
 				// Un enlace externo a la documentación de Astro que se abre en una nueva pestaña.
 				{
-					label: 'Astro Docs',
+					label: 'Documentación de Astro',
 					link: 'https://docs.astro.build/',
 					attrs: { target: '_blank', style: 'font-style: italic' },
 				},
@@ -349,10 +349,10 @@ La configuración anterior genera la siguiente barra lateral:
 <SidebarPreview
 	config={[
 		{
-			label: 'Guides',
+			label: 'Guías',
 			items: [
 				{
-					label: 'Astro Docs',
+					label: 'Documentación de Astro',
 					link: 'https://docs.astro.build/',
 					attrs: {
 						target: '_blank',
