i18n(fr): update `guides/customization.mdx`

--- a/docs/src/content/docs/fr/guides/customization.mdx
+++ b/docs/src/content/docs/fr/guides/customization.mdx
@@ -191,7 +191,7 @@ defineConfig({
 
 Starlight supporte par défaut l’ajout de liens vers vos comptes de médias sociaux dans l’en-tête du site via l’option [`social`](/reference/configuration/#social) dans l’intégration Starlight.
 
-Actuellement, les liens vers Bitbucket, Codeberg, Codepen, Discord, GitHub, GitLab, Gitter, Instagram, LinkedIn, Mastodon, Microsoft Teams, un flux RSS, Stack Overflow, Telegram, Threads, Twitch, Twitter, X et Youtube sont pris en charge.
+Actuellement, les liens vers Bitbucket, Codeberg, Codepen, Discord, un courriel, Facebook, GitHub, GitLab, Gitter, Instagram, LinkedIn, Mastodon, Microsoft Teams, un flux RSS, Stack Overflow, Telegram, Threads, Twitch, Twitter, X et Youtube sont pris en charge.
 Faites-nous savoir sur GitHub ou Discord si vous avez besoin de la prise en charge d’un autre service !
 
 ```js
