--- a/docs/src/content/docs/es/guides/sidebar.mdx
+++ b/docs/src/content/docs/es/guides/sidebar.mdx
@@ -1,8 +1,6 @@
 ---
 title: Barra Lateral de Navegación
 description: Aprende a configurar y personalizar los enlaces de navegación de la barra lateral de tu sitio Starlight.
-sidebar:
-  badge: Nuevo
 ---
 
 import FileTree from '../../../../components/file-tree.astro';
@@ -316,6 +314,50 @@ La configuración anterior genera la siguiente barra lateral:
 					label: 'Componentes',
 					link: '/guides/components/',
 					badge: { text: 'Experimental', variant: 'caution' },
+				},
+			],
+		},
+	]}
+/>
+
+## Atributos HTML personalizados
+
+Los enlaces también pueden incluir una propiedad `attrs` para agregar atributos HTML personalizados al elemento de enlace.
+
+En el siguiente ejemplo, `attrs` se usa para agregar un atributo `target="_blank"`, de modo que el enlace se abra en una nueva pestaña, y para aplicar un atributo `style` personalizado para poner en cursiva la etiqueta del enlace:
+
+```js
+starlight({
+	sidebar: [
+		{
+			label: 'Guías',
+			items: [
+				// Un enlace externo a la documentación de Astro que se abre en una nueva pestaña.
+				{
+					label: 'Documentación de Astro',
+					link: 'https://docs.astro.build/',
+					attrs: { target: '_blank', style: 'font-style: italic' },
+				},
+			],
+		},
+	],
+});
+```
+
+La configuración anterior genera la siguiente barra lateral:
+
+<SidebarPreview
+	config={[
+		{
+			label: 'Guías',
+			items: [
+				{
+					label: 'Documentación de Astro',
+					link: 'https://docs.astro.build/',
+					attrs: {
+						target: '_blank',
+						style: 'font-style: italic',
+					},
 				},
 			],
 		},
