i18n(ko-KR): update `index.mdx`

--- a/docs/src/content/docs/ko/index.mdx
+++ b/docs/src/content/docs/ko/index.mdx
@@ -1,7 +1,12 @@
 ---
 title: Starlight 🌟를 이용해 Astro로 문서 웹 사이트를 만드세요!
+head:
+  - tag: title
+    content: Starlight 🌟를 이용해 Astro로 문서 웹 사이트를 만드세요!
 description: Starlight는 Astro를 이용해 고성능의 아름다운  문서 웹 사이트를 구축할 수 있도록 도와줍니다.
 template: splash
+editUrl: false
+lastUpdated: false
 banner:
   content: |
     <span class="ph-banner">
