--- a/docs/src/content/docs/zh/index.mdx
+++ b/docs/src/content/docs/zh/index.mdx
@@ -1,7 +1,12 @@
 ---
 title: Starlight 🌟 使用 Astro 构建文档站点
+head:
+  - tag: title
+    content: Starlight 🌟 使用 Astro 构建文档站点
 description: Starlight 帮助你使用 Astro 构建漂亮、高性能的文档网站。
 template: splash
+editUrl: false
+lastUpdated: false
 banner:
   content: |
     <span class="ph-banner">
