improve translation in docs/id/index.mdx

--- a/docs/src/content/docs/id/index.mdx
+++ b/docs/src/content/docs/id/index.mdx
@@ -1,6 +1,6 @@
 ---
-title: Starlight 🌟 Wujudkan situs dokumentasi dengan Astro
-description: Starlight membantu mewujudkan situs web dokumentasi yang menawan dan berperforma tinggi dengan Astro.
+title: Starlight 🌟 Membangun website dokumentasi dengan Astro
+description: Starlight membantu membangun website dokumentasi yang menawan dan berperforma tinggi dengan Astro.
 template: splash
 banner:
   content: |
@@ -13,7 +13,7 @@ banner:
     </span>
 hero:
   title: Buat dokumentasi yang bersinar dengan Starlight
-  tagline: Semua yang Anda butuhkan untuk mewujudkan situs dokumentasi yang luar biasa. Cepat, ramah pengguna, dan sangat mudah digunakan.
+  tagline: Semua yang Anda butuhkan untuk membangun website dokumentasi yang luar biasa. Cepat, ramah pengguna, dan sangat mudah digunakan.
   image:
     file: ../../../assets/hero-star.webp
   actions:
@@ -31,12 +31,12 @@ import AboutAstro from '../../../components/about-astro.astro';
 
 <CardGrid stagger>
 	<Card title="Dokumentasi yang menawan" icon="open-book">
-		Sudah termasuk: Navigasi situs, pencarian, terjemahan, SEO, tipografi yang
+		Sudah termasuk: Navigasi website, pencarian, terjemahan, SEO, tipografi yang
 		mudah dibaca, _code highlighting_, mode gelap, dan masih banyak lagi.
 	</Card>
-	<Card title="Ditenagai oleh Astro" icon="rocket">
+	<Card title="Berbasis Astro" icon="rocket">
 		Manfaatkan kekuatan penuh dan performa Astro. Kembangkan Starlight dengan
-		pustaka dan integrasi Astro favorit Anda.
+		_library_ dan integrasi Astro favorit Anda.
 	</Card>
 	<Card title="Markdown, Markdoc, and MDX" icon="document">
 		Gunakan bahasa markup favorit Anda. Starlight menyediakan validasi
