--- a/docs/src/content/docs/zh-cn/guides/components.mdx
+++ b/docs/src/content/docs/zh-cn/guides/components.mdx
@@ -138,12 +138,12 @@ import { LinkCard, CardGrid } from '@astrojs/starlight/components';
 <LinkCard
 	title="自定义 Starlight"
 	description="了解如何使用自定义样式、字体等打造你自己的 Starlight 网站。"
-	href="/zh/guides/customization/"
+	href="/zh-cn/guides/customization/"
 />
 
 <CardGrid>
-	<LinkCard title="创作 Markdown" href="/zh/guides/authoring-content/" />
-	<LinkCard title="组件" href="/zh/guides/components/" />
+	<LinkCard title="创作 Markdown" href="/zh-cn/guides/authoring-content/" />
+	<LinkCard title="组件" href="/zh-cn/guides/components/" />
 </CardGrid>
 ```
 
@@ -154,12 +154,12 @@ import { LinkCard } from '@astrojs/starlight/components';
 <LinkCard
 	title="自定义 Starlight"
 	description="了解如何使用自定义样式、字体等打造你自己的 Starlight 网站。"
-	href="/zh/guides/customization/"
+	href="/zh-cn/guides/customization/"
 />
 
 <CardGrid>
-	<LinkCard title="创作 Markdown" href="/zh/guides/authoring-content/" />
-	<LinkCard title="组件" href="/zh/guides/components/" />
+	<LinkCard title="创作 Markdown" href="/zh-cn/guides/authoring-content/" />
+	<LinkCard title="组件" href="/zh-cn/guides/components/" />
 </CardGrid>
 
 ### 图标
