--- a/docs/src/content/docs/zh-cn/guides/project-structure.mdx
+++ b/docs/src/content/docs/zh-cn/guides/project-structure.mdx
@@ -12,7 +12,7 @@ Starlight 项目通常遵循与其他 Astro 项目相同的文件和目录结构
 - `astro.config.mjs` — Astro 配置文件；包括 Starlight 集成和配置。
 - `src/content/config.ts` — 内容集合配置文件；将 Starlight 的 frontmatter 模式添加到你的项目中。
 - `src/content/docs/` — 内容文件。Starlight 将此目录中的每个 `.md`、`.mdx` 或 `.mdoc` 文件转换为站点上的一个页面。
-- `src/content/i18n/` (可选) — 支持[国际化](/guides/i18n/)的翻译数据。
+- `src/content/i18n/` (可选) — 支持[国际化](/zh-cn/guides/i18n/)的翻译数据。
 - `src/` — 项目的其他源代码和文档（组件、样式、图像等）。
 - `public/` — 静态资源（字体、网站图标、PDF 等）不会被 Astro 处理。
 
