--- a/docs/src/content/docs/zh-cn/index.mdx
+++ b/docs/src/content/docs/zh-cn/index.mdx
@@ -25,7 +25,7 @@ hero:
     - text: 开始使用
       icon: right-arrow
       variant: primary
-      link: /zh/getting-started/
+      link: /zh-cn/getting-started/
     - text: 在 GitHub 上查看
       icon: external
       link: https://github.com/withastro/starlight
