--- a/docs/src/content/docs/es/guides/i18n.mdx
+++ b/docs/src/content/docs/es/guides/i18n.mdx
@@ -27,8 +27,8 @@ Starlight proporciona soporte incorporado para sitios multilingües, incluidas l
    				en: {
    					label: 'English',
    				},
-   				// Chino simplificado en `src/content/docs/zh/`
-   				zh: {
+   				// Chino simplificado en `src/content/docs/zh-cn/`
+   				'zh-cn': {
    					label: '简体中文',
    					lang: 'zh-CN',
    				},
@@ -55,7 +55,7 @@ Starlight proporciona soporte incorporado para sitios multilingües, incluidas l
        - docs/
          - ar/
          - en/
-         - zh/
+         - zh-cn/
 
    </FileTree>
 
@@ -84,7 +84,7 @@ export default defineConfig({
 					label: 'English',
 					lang: 'en', // lang es obligatorio para los locales raíz
 				},
-				zh: {
+				'zh-cn': {
 					label: '简体中文',
 					lang: 'zh-CN',
 				},
@@ -102,7 +102,7 @@ Cuando uses una `root` locale, mantén las páginas para ese idioma directamente
   - content/
     - docs/
       - **index.md**
-      - zh/
+      - zh-cn/
         - **index.md**
 
 </FileTree>
