--- a/docs/src/content/docs/fr/guides/i18n.mdx
+++ b/docs/src/content/docs/fr/guides/i18n.mdx
@@ -27,8 +27,8 @@ Starlight offre une prise en charge intégrée des sites multilingues, y compris
    				en: {
    					label: 'English',
    				},
-   				// Docs en chinois simplifié dans `src/content/docs/zh/`
-   				zh: {
+   				// Docs en chinois simplifié dans `src/content/docs/zh-cn/`
+   				'zh-cn': {
    					label: '简体中文',
    					lang: 'zh-CN',
    				},
@@ -55,7 +55,7 @@ Starlight offre une prise en charge intégrée des sites multilingues, y compris
        - docs/
          - ar/
          - en/
-         - zh/
+         - zh-cn/
 
    </FileTree>
 
@@ -84,7 +84,7 @@ export default defineConfig({
 					label: 'English',
 					lang: 'en', // lang est nécessaire pour les locales de la racine
 				},
-				zh: {
+				'zh-cn': {
 					label: '简体中文',
 					lang: 'zh-CN',
 				},
@@ -102,7 +102,7 @@ Lorsque vous utilisez une locale `root`, gardez les pages pour cette langue dire
   - content/
     - docs/
       - **index.md**
-      - zh/
+      - zh-cn/
         - **index.md**
 
 </FileTree>
