--- a/docs/src/content/docs/guides/i18n.mdx
+++ b/docs/src/content/docs/guides/i18n.mdx
@@ -27,8 +27,8 @@ Starlight provides built-in support for multilingual sites, including routing, f
    				en: {
    					label: 'English',
    				},
-   				// Simplified Chinese docs in `src/content/docs/zh/`
-   				zh: {
+   				// Simplified Chinese docs in `src/content/docs/zh-cn/`
+   				'zh-cn': {
    					label: '简体中文',
    					lang: 'zh-CN',
    				},
@@ -55,7 +55,7 @@ Starlight provides built-in support for multilingual sites, including routing, f
        - docs/
          - ar/
          - en/
-         - zh/
+         - zh-cn/
 
    </FileTree>
 
@@ -84,7 +84,7 @@ export default defineConfig({
 					label: 'English',
 					lang: 'en', // lang is required for root locales
 				},
-				zh: {
+				'zh-cn': {
 					label: '简体中文',
 					lang: 'zh-CN',
 				},
@@ -102,7 +102,7 @@ When using a `root` locale, keep pages for that language directly in `src/conten
   - content/
     - docs/
       - **index.md**
-      - zh/
+      - zh-cn/
         - **index.md**
 
 </FileTree>
