--- a/docs/src/content/docs/zh-cn/guides/sidebar.mdx
+++ b/docs/src/content/docs/zh-cn/guides/sidebar.mdx
@@ -51,7 +51,7 @@ import SidebarPreview from '../../../../components/sidebar-preview.astro';
 
 ## 添加链接和链接分组
 
-要配置侧边栏 [链接](#链接) 和 [链接分组](#分组)（在可折叠的标题中），请在 `astro.config.mjs` 中使用 [`starlight.sidebar`](/zh/reference/configuration/#sidebar) 属性。
+要配置侧边栏 [链接](#链接) 和 [链接分组](#分组)（在可折叠的标题中），请在 `astro.config.mjs` 中使用 [`starlight.sidebar`](/zh-cn/reference/configuration/#sidebar) 属性。
 
 结合使用链接和链接分组，你可以创建各种侧边栏布局。
 
@@ -63,7 +63,7 @@ import SidebarPreview from '../../../../components/sidebar-preview.astro';
 starlight({
 	sidebar: [
 		// 指向 CSS & Styling 指南的链接
-		{ label: 'CSS & Styling', link: '/zh/guides/css-and-tailwind/' },
+		{ label: 'CSS & Styling', link: '/zh-cn/guides/css-and-tailwind/' },
 		// 指向 Astro 官网的外部链接
 		{ label: 'Astro', link: 'https://astro.build/' },
 	],
@@ -74,7 +74,7 @@ starlight({
 
 <SidebarPreview
 	config={[
-		{ label: 'CSS & Styling', link: '/zh/guides/css-and-tailwind/' },
+		{ label: 'CSS & Styling', link: '/zh-cn/guides/css-and-tailwind/' },
 		{ label: 'Astro', link: 'https://astro.build/' },
 	]}
 />
@@ -189,9 +189,9 @@ starlight({
 
 #### 在 frontmatter 中自定义自动生成的链接
 
-在单个页面中使用 [`sidebar` frontmatter 字段](/zh/reference/frontmatter/#sidebar) 来自定义自动生成的链接。
+在单个页面中使用 [`sidebar` frontmatter 字段](/zh-cn/reference/frontmatter/#sidebar) 来自定义自动生成的链接。
 
-侧边栏 frontmatter 选项允许你设置 [自定义标签](/zh/reference/frontmatter/#label) 或者为链接添加 [徽章](/zh/reference/frontmatter/#badge)，[隐藏](/zh/reference/frontmatter/#hidden) 侧边栏中的链接，或者定义 [自定义排序权重](/zh/reference/frontmatter/#order)。
+侧边栏 frontmatter 选项允许你设置 [自定义标签](/zh-cn/reference/frontmatter/#label) 或者为链接添加 [徽章](/zh-cn/reference/frontmatter/#badge)，[隐藏](/zh-cn/reference/frontmatter/#hidden) 侧边栏中的链接，或者定义 [自定义排序权重](/zh-cn/reference/frontmatter/#order)。
 
 ```md
 ---
@@ -367,22 +367,22 @@ starlight({
 		{
 			label: 'Guides',
 			translations: {
-				zh: '指南',
+				'zh-cn': '指南',
 			},
 			items: [
 				{
 					label: 'Components',
 					translations: {
-						zh: '组件',
+						'zh-cn': '组件',
 					},
-					link: '/zh/guides/components/',
+					link: '/zh-cn/guides/components/',
 				},
 				{
 					label: 'Internationalization (i18n)',
 					translations: {
-						zh: '国际化 (i18n)',
+						'zh-cn': '国际化 (i18n)',
 					},
-					link: '/zh/guides/i18n/',
+					link: '/zh-cn/guides/i18n/',
 				},
 			],
 		},
@@ -397,8 +397,8 @@ starlight({
 		{
 			label: '指南',
 			items: [
-				{ label: '组件', link: '/zh/guides/components/' },
-				{ label: '国际化 (i18n)', link: '/zh/guides/i18n/' },
+				{ label: '组件', link: '/zh-cn/guides/components/' },
+				{ label: '国际化 (i18n)', link: '/zh-cn/guides/i18n/' },
 			],
 		},
 	]}
