remove italic styling from headings to improve consistency

--- a/docs/src/content/docs/id/getting-started.mdx
+++ b/docs/src/content/docs/id/getting-started.mdx
@@ -62,7 +62,7 @@ src/content/docs/hello-world.md => your-site.com/hello-world
 src/content/docs/guides/faq.md => your-site.com/guides/faq
 ```
 
-### _Frontmatter_ yang _type-safe_
+### Frontmatter yang type-safe
 
 Semua halaman Starlight berbagi [properti _frontmatter_ umum](/id/reference/frontmatter/) yang dapat dikostumisasi untuk mengontrol tampilan setiap halaman:
 
@@ -75,7 +75,7 @@ description: This is a page in my Starlight-powered site
 
 Jika ada properti yang terlewat, Starlight akan memberitahu Anda.
 
-## _Deploy_ website Starlight Anda
+## Deploy website Starlight Anda
 
 Setelah Anda selesai membuat dan mengkostumisasi website Starlight anda, anda dapat men-_deploy_ website Anda ke web server atau platform hosting pilihan Anda, termasuk Netlify, Vercel, GitHub Pages, dan lain sebagainya.
 
@@ -118,7 +118,7 @@ yarn upgrade @astrojs/starlight --latest
 
 Anda dapat melihat daftar lengkap perubahan-perubahan yang dilakukan dalam setiap rilis di [_changelog_](https://github.com/withastro/starlight/blob/main/packages/starlight/CHANGELOG.md).
 
-## _Troubleshooting_ Starlight
+## Troubleshooting Starlight
 
 [Konfigurasi proyek](/id/reference/configuration/) dan [konfigurasi _frontmatter_](/id/reference/frontmatter/) tersedia di bagian Referensi pada website ini. Gunakan halaman-halaman tersebut untuk memastikan website Starlight Anda terkonfigurasi dengan benar dan berfungsi dengan baik.
 
