--- a/docs/src/content/docs/id/manual-setup.mdx
+++ b/docs/src/content/docs/id/manual-setup.mdx
@@ -12,7 +12,7 @@ Jika Anda ingin menambahkan Starlight ke proyek Astro yang sudah ada, berikut in
 
 Untuk mengikuti panduan ini, Anda membutuhkan proyek Astro yang sudah berjalan.
 
-### Menambahkan _Starlight integration_
+### Menambahkan Starlight integration
 
 Starlight adalah sebuah [integrasi Astro](https://docs.astro.build/en/guides/integrations-guide/). Tambahkan ke website Anda dengan cara menjalankan perintah `astro add` di _root directory_ proyek Anda:
 
