improve translation for Brought to you by Astro section in index.mdx

--- a/docs/src/content/docs/id/index.mdx
+++ b/docs/src/content/docs/id/index.mdx
@@ -49,9 +49,9 @@ import AboutAstro from '../../../components/about-astro.astro';
 </CardGrid>
 
 <AboutAstro title="Dipersembahkan oleh">
-Astro adalah _framework_ web serbaguna didesain untuk web yang cepat.
+Astro adalah _web framework_ serbaguna yang didesain untuk kecepatan.
 Gunakan konten Anda dari sumber mana saja dan _deploy_ di mana saja, 
-semua ditenagai dengan pustaka dan komponen UI favorit Anda.
+semuanya didukung oleh _library_ dan komponen UI favorit Anda.
 
 [Pelajari tentang Astro](https://astro.build/)
 
