added translations for the product-hunt block

--- a/docs/src/content/docs/ru/index.mdx
+++ b/docs/src/content/docs/ru/index.mdx
@@ -12,8 +12,8 @@ banner:
     <span class="ph-banner">
       <span class="ph-houston"><img src="/ph-houston.svg" alt="" width="72" height="72"/></span>
       <span class="ph-text">
-        <strong>Welcome Product Hunters&nbsp;👋</strong>
-        <a href="https://www.producthunt.com/posts/starlight-by-astro">We are live right now!</a>
+        <strong>Добро пожаловать&nbsp;👋</strong>
+        <a href="https://www.producthunt.com/posts/starlight-by-astro">Мы на Product Hunt прямо сейчас!</a>
       </span>
     </span>
 hero:
@@ -39,7 +39,7 @@ import AboutAstro from '../../../components/about-astro.astro';
         Включает в себя: навигацию по сайту, поиск, интернационализацию,
         оптимизацию для поисковых систем (SEO), удобную типографику, подсветку кода, ночной режим и многое другое.
 	</Card>
-	<Card title="Работает на Astro." icon="rocket">
+	<Card title="Работает на Astro" icon="rocket">
         Воспользуйтесь всей мощью и производительностью Astro.
         Расширьте Starlight с вашими любимыми интеграциями и библиотеками Astro.
 	</Card>
