Use `/ru/` in docs.astro.build links

--- a/docs/src/content/docs/ru/getting-started.mdx
+++ b/docs/src/content/docs/ru/getting-started.mdx
@@ -51,7 +51,7 @@ Starlight готов к созданию нового контента или к
 
 ### Форматы файлов
 
-Starlight поддерживает создание контента в форматах Markdown и MDX. (Вы можете добавить поддержку Markdoc, установив экспериментальную [интеграцию Astro Markdoc](https://docs.astro.build/en/guides/integrations-guide/markdoc/).)
+Starlight поддерживает создание контента в форматах Markdown и MDX. (Вы можете добавить поддержку Markdoc, установив экспериментальную [интеграцию Astro Markdoc](https://docs.astro.build/ru/guides/integrations-guide/markdoc/).)
 
 ### Добавить страницы
 
@@ -130,7 +130,7 @@ yarn upgrade @astrojs/starlight --latest
 
 Смотрите пополняющийся список руководств в боковой панели для помощи в добавлении контента и настройке вашего сайта на Starlight.
 
-Если вы не можете найти ответ в этой документации, пожалуйста, посетите [полную документацию Astro](https://docs.astro.build).
+Если вы не можете найти ответ в этой документации, пожалуйста, посетите [полную документацию Astro](https://docs.astro.build/ru/).
 Ваш вопрос может быть решен узнав как в целом работает Astro под темой Starlight.
 
 Вы также можете узнать про любые известные [проблемы Starlight на GitHub](https://github.com/withastro/starlight/issues) и получить помощь в
