--- a/docs/src/content/docs/uk/showcase.mdx
+++ b/docs/src/content/docs/uk/showcase.mdx
@@ -1,53 +1,53 @@
 ---
-title: Starlight Showcase
-description: Discover sites built with Starlight and community tools that extend Starlight!
+title: Вітрина "Зоряне світло
+description: Відкрийте для себе сайти, створені за допомогою Starlight, та інструменти спільноти, які розширюють Starlight!
 ---
 
-:::tip[Add your own!]
-Have you built a Starlight site or a tool for Starlight?
-Open a PR adding a link to this page!
+:::tip[Додайте свій власний!]
+Ви вже створили сайт на Starlight чи інструмент для Starlight?
+Відкрийте PR, додавши посилання на цю сторінку!
 :::
 
-## Sites
+## Сайти
 
-import ShowcaseSites from '../../components/showcase-sites.astro';
+імпортуйте ShowcaseSites з '../../components/showcase-sites.astro';
 
-Starlight is already being used in production. These are some of the sites around the web:
+Starlight вже використовується у виробництві. Ось деякі з сайтів в Інтернеті:
 
 <ShowcaseSites />
 
-See all the [public project repos using Starlight on GitHub](https://github.com/withastro/starlight/network/dependents).
+Перегляньте всі [публічні репозиторії проектів з використанням Starlight на GitHub] (https://github.com/withastro/starlight/network/dependents).
 
-## Community plugins
+## Плагіни спільноти
 
 import { CardGrid, LinkCard } from '@astrojs/starlight/components';
 
-These community tools, plugins, and integrations work alongside Starlight to extend its functionality.
+Ці інструменти спільноти, плагіни та інтеграції працюють разом з Starlight, розширюючи його функціональність.
 
 <CardGrid>
 	<LinkCard
 		href="https://www.feelback.dev/blog/new-astro-starlight-integration/"
 		title="FeelBack"
-		description="Add a user feedback system to your docs pages."
+		description="Додайте систему зворотного зв'язку з користувачами до сторінок ваших документів."
 	/>
 	<LinkCard
 		href="https://github.com/HiDeoo/starlight-blog"
 		title="starlight-blog"
-		description="Add a blog to your documentation site."
+		description="Додайте блог до вашого сайту документації."
 	/>
 	<LinkCard
 		href="https://github.com/HiDeoo/starlight-links-validator"
 		title="starlight-links-validator"
-		description="Check for broken links in your Starlight pages."
+		description="Перевірте наявність непрацюючих посилань на ваших сторінках Starlight."
 	/>
 	<LinkCard
 		href="https://github.com/HiDeoo/starlight-typedoc"
 		title="starlight-typedoc"
-		description="Generate Starlight pages from TypeScript using TypeDoc."
+		description="Створення сторінок Starlight з TypeScript за допомогою TypeDoc."
 	/>
 	<LinkCard
 		href="https://github.com/HiDeoo/starlight-openapi"
 		title="starlight-openapi"
-		description="Create documentation pages from OpenAPI/Swagger specifications."
+		description="Створення сторінок документації зі специфікацій OpenAPI/Swagger."
 	/>
 </CardGrid>
