i18n(tr): add index.md and fix url paths for tr

--- a/docs/src/content/docs/tr/404.md
+++ b/docs/src/content/docs/tr/404.md
@@ -8,6 +8,6 @@ hero:
   actions:
     - text: Ana Sayfaya Git
       icon: right-arrow
-      link: /
+      link: /tr/
       variant: primary
 ---
