--- a/docs/src/content/docs/tr/getting-started.mdx
+++ b/docs/src/content/docs/tr/getting-started.mdx
@@ -38,7 +38,7 @@ yarn create astro --template starlight
 </TabItem>
 </Tabs>
 
-Bu, siten için yapılandırmalar ve tüm gerekli dosyalarla birlikte yeni bir [proje dizini](/guides/project-structure/) oluşturacaktır.
+Bu, siten için yapılandırmalar ve tüm gerekli dosyalarla birlikte yeni bir [proje dizini](/tr/guides/project-structure/) oluşturacaktır.
 
 :::tip[Çalışan haline göz at]
 Starlight'ı tarayıcında dene:
@@ -62,7 +62,7 @@ src/content/docs/guides/faq.md => your-site.com/guides/faq
 
 ### Tip-korumalı Ön BÖlüm
 
-Tüm Starlight sayfaları özelleştirilebilir [ortak ön-bölüm mülkleri seti](/reference/frontmatter/)'ni, sayfaların nasıl görüntüleneceğini kontrol etmek için paylaşır:
+Tüm Starlight sayfaları özelleştirilebilir [ortak ön-bölüm mülkleri seti](/tr/reference/frontmatter/)'ni, sayfaların nasıl görüntüleneceğini kontrol etmek için paylaşır:
 
 ```md
 ---
@@ -118,7 +118,7 @@ yarn upgrade @astrojs/starlight --latest
 
 ## Starlight'ta Sorun Giderme
 
-Starlight [Proje Yapılandırması](/reference/configuration/) ve [Benzersiz Sayfa Ön-bölüm Yapılandırması](/reference/frontmatter/) bilgileri, bu sitenin referanslar bölümünde mevcuttur. Bu sayfalardan, Starlight siteni doğru yapılandırdığından ve sitenin düzgün çalıştığından emin olmak için kullanabilirsin.
+Starlight [Proje Yapılandırması](/tr/reference/configuration/) ve [Benzersiz Sayfa Ön-bölüm Yapılandırması](/tr/reference/frontmatter/) bilgileri, bu sitenin referanslar bölümünde mevcuttur. Bu sayfalardan, Starlight siteni doğru yapılandırdığından ve sitenin düzgün çalıştığından emin olmak için kullanabilirsin.
 
 İçerik eklemede ve Starlight siteni özelleştirmene yardımcı olmak için kenar çubuğundaki rehber listesine göz at.
 Aradığın cevap dokümantasyonda yoksa, tüm Astro dokümantasyonu için lütfen [Astro Dokümantasyonu](https://docs.astro.build)'nu ziyaret et. Starlight teması altında Astro'nun genel olarak nasıl çalıştığıyla sorun yanıtlanmış olabilir.
